--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "Jags",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.7",
-    "dotenv": "^16.4.5"
+    "axios": "1.6.8",
+    "dotenv": "16.4.5"
   },
   "devDependencies": {
-    "vitest": "^1.3.1"
+    "vitest": "1.6.0"
   }
 }
